# ESM3di

./: .gitignore  CONDA_BUILD.md  ESM3Di_Colab.ipynb  ESM3di_model.py  HF_UPLOAD_GUIDE.md  LICENSE  LIGHTNING_SLURM_GUIDE.md  README.md  TENSORBOARD_GUIDE.md  TORCHRUN_GUIDE.md  TRAINING_EXAMPLES.md  TRAINING_GUIDE.md  __init__.py  build_trainingset.py  comparative_tree_analysis.ipynb  config_esm2_3B_balanced_ADD_PLDDT.txt  config_esmpp_bfvd.json  config_esmpp_large.json  config_example.json  config_example_esm2big.json  config_example_esmc.json  config_lightning.json  config_p40.json  configsmall.json  environment.yml  environment_blackwell.yml  environment_p40.yml  esmretrain.py  esmretrain_lightning.py  esmretrain_multigpu.py  evaluate_model.ipynb  fastas2foldseekdb.py  fastas2foldseekdb.yml  fastas2foldseekdb_README.md  fastas2foldseekdb_env.yml  launch_local_torchrun.sh  launch_multigpu_training.sh  merge_lora.py  predict_3di.py  pyproject.toml  (+28 more)
.github/: copilot-instructions.md
PDN_Data/: Hepacivirus.fasta  Pestivirus.fasta  entries_fasta_Pegivirus.txt  entries_fasta_hepacivirus.txt  entries_fasta_orthoflavivirus.txt  entries_fasta_pestivirus.txt  orthoflavivirus.fasta  pegivirus.fasta
alphacorona/: alphacoronaviridae  alphacoronaviridae_h  alphacoronaviridae_h.index  alphacoronaviridae_ss  alphacoronaviridae_ss.index
benchmark/: 3di_alignment.ipynb  clades.txt  metavr_taxonomy.ipynb  scope_family.ipynb  taxonomy_split.ipynb
conda-recipe/: meta.yaml
configs/: config_esmpp_large_cyclical_bfvd_full_README.txt
dongwook_proteos/: all_clades_db  all_clades_db.index  all_clades_db_h  all_clades_db_h.index  all_clades_db_ss
esm3di/: ESM3di_model copy.py  ESM3di_model.py  T5Model.py  __init__.py  balance_by_taxon.py  build_trainingset.py  esmretrain.py  esmretrain_mlm.py  extract_plddt_bins.py  extract_taxon_subset.py  fastas2foldseekdb.py  hyena_head.py  iterative_head.py  losses.py  model_outputs.py  split_data.py  tracks.py  tree_utils.py
esmc_viral_ft/hf_compatible/: modeling_esm_plusplus.py
flavi_redo/: clip_regions.ipynb
notebooks/: comparative_tree_analysis.ipynb  evaluate_model.ipynb  visualize_tracks.ipynb
tensorboard_logs/run_20251204_142553/: events.out.tfevents.1764854753.dmoi-WS-C621E-SAGE-Series.11248.0
tensorboard_logs/run_20251204_142627/: events.out.tfevents.1764854787.dmoi-WS-C621E-SAGE-Series.11302.0
tensorboard_logs/run_20251204_142742/: events.out.tfevents.1764854862.dmoi-WS-C621E-SAGE-Series.11383.0
tensorboard_logs/run_20251204_143653/: events.out.tfevents.1764855413.dmoi-WS-C621E-SAGE-Series.11722.0
test_structs/: downloaded_files.txt
tmp/: latest
