[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esm3di"
version = "0.1.0"
description = "ESM + PEFT LoRA for 3Di per-residue prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "accelerate>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/esm3di"

[project.scripts]
esm3di-train = "esm3di.esmretrain:main"
esm3di-makefoldseekdb = "esm3di.fastas2foldseekdb:main"
esm3di-buildtrainingset = "esm3di.build_trainingset:main"
esm3di-download-alphafold = "esm3di.testdataset:main"

[tool.setuptools]
packages = {find = {}}
