[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esm3di"
version = "0.1.0"
description = "ESM + PEFT LoRA for 3Di per-residue prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core ML dependencies
    "torch>=2.5.0",
    "transformers>=4.45.0,<4.49.0",  # Compatible with peft 0.12.x and ESM++
    "peft>=0.12.0,<0.14.0",          # LoRA adapters, compatible with transformers 4.48.x
    "accelerate>=1.0.0",              # Required by peft and transformers
    "safetensors>=0.4.0",             # Fast model loading
    
    # Tokenizer dependencies
    "sentencepiece>=0.2.0",
    "tokenizers>=0.20.0",
    "protobuf>=4.0.0",
    
    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # Bioinformatics
    "biopython>=1.80",
    
    # Utilities
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
    "einops>=0.7.0",
    "tensorboard>=2.14.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "fsspec>=2023.1.0",
]

[project.optional-dependencies]
# GPU optimization (requires CUDA)
gpu = [
    "bitsandbytes>=0.42.0",
    "triton>=2.1.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
# All optional dependencies
all = [
    "esm3di[gpu,dev]",
]

[project.urls]
Homepage = "https://github.com/DessimozLab/ESM3di"
Repository = "https://github.com/DessimozLab/ESM3di"
Issues = "https://github.com/DessimozLab/ESM3di/issues"

[project.scripts]
esm3di-train = "esm3di.esmretrain:main"
esm3di-makefoldseekdb = "esm3di.fastas2foldseekdb:main"
esm3di-buildtrainingset = "esm3di.build_trainingset:main"
esm3di-download-alphafold = "esm3di.testdataset:main"

[tool.setuptools]
packages = ["esm3di"]
package-dir = {"" = "."}
